samples/0-sb-hello-world/deployment/0-simple.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sb-hello-world
  namespace: k8s-in-practice
  labels:
    app: sb-hello-world
spec:
  replicas: 1
  serviceName: sb-hello-world
  selector:
    matchLabels:
      app: sb-hello-world
  template:
    metadata:
      labels:
        app: sb-hello-world
    spec:
      imagePullSecrets:
        - name: nexus-registry-credentials
      containers:
        - name: sb-hello-world
          image: nexus.esolutions.ro/k8s-in-practice/sb-hello-world
          ports:
          - name: http
            containerPort: 8080
